<resources>
    <string name="app_name">Timetable</string>
    <string name="label">Bahnhof</string>
    <string name="Bahnhof">Bern</string>
    <string name="begruessung">Willkommen</string>
    <string name="tutorial">Geben Sie einen beliebigen Schweizer Bahnhof ein und sehen Sie die nächsten Verbindungen ab diesem.</string>
    <string name="btnGo">Go</string>
    <string name="hilfeTitle">Hilfe</string>
    <string name="hilfeText">Diese App dient dazu, für den eingegebenen Bahnhof, die nächsten Verbindungen anzuzeigen. Die Daten stammen von der Transport-API von Open Data. https://transport.opendata.ch \nFalls bei gewissen Daten unb. steht, so heisst dies, dass diese Daten noch nicht bekannt sind (unbekannt).</string>
    <string name="impressumTitle">Impressum</string>
    <string name="impressumText">Autoren: Veselin &amp; Nathan\nDieses Projekt entstand als Projektarbeit im üK Modul 335. Der Source Code ist unter \nhttps://github.com/naTariks/Timetabl \nzu finden. \nKontaktadresse bei Problemen oder Vorschlägen: \nnathanrichard[at]bluewin.ch</string>
</resources>
